--- a/src/static/css/views/meetings.css
+++ b/src/static/css/views/meetings.css
@@ -116,8 +116,8 @@
 .meeting-action-item {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
-  padding: 0.625rem 0;
+  gap: 0.375rem;
+  padding: 0.875rem 0;
   border-block-end: 1px solid var(--color-border-default);
 }
 
